--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Fardenz/Voicemod/issues"
   },
-  "homepage": "https://github.com/Fardenz/Voicemod#readme"
+  "homepage": "https://github.com/Fardenz/Voicemod#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.5"
+  }
 }
